--- a/team-members/tantikon.html
+++ b/team-members/tantikon.html
@@ -231,11 +231,11 @@
       <p style="color:#fca5a5; font-size:0.9rem;">เพลง: My Name Is Brian</p>
     </div>
 
-    <!-- Ronaldo Zoo -->
-    <div class="ronaldo">
-      <h3>🔥 Ronaldo Zoo Celebration 🔥</h3>
-      <img src="https://media.tenor.com/2roX3uxz_68AAAAM/cristiano-ronaldo.gif" alt="Ronaldo Zoo">
-    </div>
+    <!-- Ronaldo Siuuu Celebration -->
+<div class="ronaldo">
+  <h3>🔥 Cristiano Ronaldo - SIUUU 🔥</h3>
+  <img src="ronaldo-siuuu.gif" alt="Cristiano Ronaldo Siuuu">
+</div>
   </div>
 
   <footer>
@@ -257,3 +257,8 @@
   </script>
 </body>
 </html>
+
+ช่วยเปลียนพื้นหลังเป็นดังภาพ
+
+
+
