--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -238,8 +238,8 @@
             <div class="actions">
               <a class="btn" href="../index.html">ดูหน้า Team</a>
               <a class="btn btn--ghost" href="kittinun.html">ไปหน้า Kittinun</a>
-              <a class="btn btn--ghost" href="pannakron.html">ไปหน้า Kittinun</a>
-              <a class="btn btn--ghost" href="tantikon.html">ไปหน้า Kittinun</a>
+              <a class="btn btn--ghost" href="pannakron.html">ไปหน้า pannakorn</a>
+              <a class="btn btn--ghost" href="tantikon.html">ไปหน้า tantikon</a>
             </div>
           </div>
         </div>
