--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -233,7 +233,7 @@
             <ul>
               <li>ชอบเล่นบาสเกตบอล ชอบอ่านมังงะ ชอบฟังเพลง และ ชอบดูอนิเมะ</li>
               <li>เกมที่ชอบ: <b>Wuthering Waves</b>, <b>BlueArchive</b>, <b>Uma Musume Pretty Derby</b></li>
-              <li>ชอบสีชมพู ชอบของหวาน และชอบของที่ดูนุ่มนิ่ม~~~</li>
+              <li>ชอบสีชมพู ชอบของหวาน และชอบของที่ดูนุ่มนิ่ม~~</li>
             </ul>
             <div class="actions">
               <a class="btn" href="../index.html">ดูหน้า Team</a>
