--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -22,7 +22,7 @@
     <section class="py-12">
       <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 text-center">
         <img src="https://via.placeholder.com/150" alt="Profile" class="w-32 h-32 rounded-full mx-auto border shadow" />
-        <h1 class="mt-4 text-3xl font-extrabold">ชื่อ นามสกุล</h1>
+        <h1 class="mt-4 text-3xl font-extrabold">Kitinan Kanthakat</h1>
         <p class="mt-2 text-slate-600 dark:text-slate-300">ตำแหน่ง / อาชีพ</p>
         <p class="mt-4 max-w-xl mx-auto text-slate-600 dark:text-slate-300">แนะนำตัวสั้น ๆ เกี่ยวกับคุณ ความสนใจ ประสบการณ์ หรือสิ่งที่คุณกำลังทำอยู่</p>
 
