--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <img class="avatar" loading="lazy" src="team-members/images/kitinan.jpg" alt="Kitinan Kantakad">
         </div>
         <h3>Kitinan Kantakad</h3>
-        <p>Time Master</p>
+        <p>Coffee Man</p>
         <a class="open" href="team-members/kitinan.html" aria-label="Open Kitinan profile">Open</a>
       </article>
 
