--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -71,15 +71,15 @@
 <body>
   <div class="profile">
     <img src="profile.jpg" alt="Profile" class="avatar">
-    <h1>Kittinun Rattanasuphannawet</h1>
-    <p>📖 Hobby: อ่านหนังสือ, ฟังเพลง</p>
-    <p>🎮 Game: Honkai Star Rail</p>
+    <h1>Kitinan Kanthakat</h1>
+    <p>📖 Hobby: อ</p>
+    <p>🎮 Game: </p>
 
     <div class="links">
       <a href="https://facebook.com/" target="_blank">Facebook</a>
       <a href="https://github.com/" target="_blank">GitHub</a>
       <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
-      <a href="mailto:kittinun.r@gmail.com">Email</a>
+      <a href="toonkitinan1234@gmail.com">Email</a>
     </div>
 
     <a class="btn" href="resume.pdf" download>📄 Download Resume</a>
